--- a/styles/vanillatweaks.css
+++ b/styles/vanillatweaks.css
@@ -35,19 +35,26 @@ a:focus {
 
 .card img {
     width: 100%;
-    height: 100%;
 }
+
+@media (min-width: 768px) {
+    .card img {
+      max-width: 300px; } }
 
 .card .text-region {
     position: relative;
 }
 
-.card .text-region h4 {
-    padding-bottom: 10px;
+3card .text-region h3 {
+    margin-top: 10px;
+    padding: 8px 0;
+    font-size: 1.4em;
 }
 
 .card .text-region p {
-    padding-top: 0;
+    padding: 5px 0;
+    margin: 0;
+    font-size: 0.9em;
 }
 
 .card .versions {
@@ -80,8 +87,8 @@ a:focus {
     color: white;
 }
 
-@media screen and (max-width:512px) {
+@media screen and (max-width:640px) {
     #title {
-        font-size: 2rem;
+        font-size: 3rem;
     }
 }
