Enabled Upcoming and fixed img in mods not completely occupying card.

--- a/styles/default.css
+++ b/styles/default.css
@@ -17,3 +17,9 @@ h1 {
 .nav-link {
     font-size: 1.5rem;
 }
+
+@media screen and (max-width:640px) {
+    #title {
+        font-size: 3rem;
+    }
+}
