--- a/styles/default.css
+++ b/styles/default.css
@@ -1,25 +1,64 @@
-.element_text {
-    text-align: center;
-}
-
-.element_downloads {
-    text-align: center;
-}
-
-h1 {
-    text-align: center;
-}
-
-.element a {
-    text-decoration: none;
-}
-
-.nav-link {
-    font-size: 1.5rem;
-}
-
-@media screen and (max-width:640px) {
-    #title {
-        font-size: 3rem;
+    .element_text {
+        text-align: center;
     }
-}
+    
+    .element_downloads {
+        text-align: center;
+    }
+    
+    h1 {
+        text-align: center;
+    }
+    
+    h2 {
+        text-decoration: double;
+    }
+    
+    .element a {
+        text-decoration: none;
+    }
+    
+    .nav-link {
+        font-size: 1.5rem;
+    }
+    
+    .centerimg {
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
+        max-width: 150px;
+        text-align: center;
+        height: auto;
+    }
+    
+    .twitter-timeline {
+        border: 2px solid rgba(200, 200, 200, .5)!important;
+    }
+    
+    .element {
+        margin: 10px;
+        border-radius: 5px;
+        border: 1px #ebe8e8 solid;
+        -webkit-transition-duration: 0.25s;
+        transition-duration: 0.25s;
+    }
+    
+    .element:hover {
+        box-shadow: inset 0 0 0 1000px rgba(200, 200, 200, .5);
+        transform: scale(1.12);
+    }
+    
+    @media screen and (max-width:640px) {
+        #title {
+            font-size: 3rem;
+        }
+    }
+    
+    @media (max-width: 1109px) {
+        .rightbar {
+            display: none;
+            width: 0;
+            margin: 0;
+            float: none;
+        }
+    }
