--- a/styles/default.css
+++ b/styles/default.css
@@ -1,116 +1,150 @@
-    .element_text {
-        text-align: center;
+.element_text {
+    text-align: center;
+}
+
+.element_downloads {
+    text-align: center;
+}
+
+h1 {
+    text-align: center;
+}
+
+h2 {
+    text-decoration: double;
+}
+
+.card a {
+    text-decoration: none;
+}
+
+.card {
+    margin: 10px;
+    border-radius: 5px;
+    -webkit-transition-duration: 0.25s;
+    transition-duration: 0.25s;
+}
+
+.card-body {
+    text-decoration: none;
+    font-size: 0.75rem;
+    margin-top: 0;
+    padding-top: 5px;
+    padding-bottom: 5px;
+}
+
+.card-title {
+    padding: 0;
+    margin: 0;
+}
+
+.card:hover {
+    transform: scale(1.05);
+}
+
+.nav-link {
+    font-size: 1.5rem;
+}
+
+.centerimg {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 150px;
+    text-align: center;
+    height: auto;
+}
+
+.theme-switch-div {
+    width: 20%;
+    float: right;
+}
+
+.theme-switch {
+    clear: none;
+    margin-top: 5px;
+    margin-right: 5px;
+    position: relative;
+    width: 60px;
+    height: 30px;
+}
+
+.theme-switch input {
+    opacity: 0;
+    width: 0;
+    height: 0;
+}
+
+.slider {
+    position: absolute;
+    cursor: pointer;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: #ccc;
+    -webkit-transition: .4s;
+    transition: .4s;
+}
+
+.slider:before {
+    position: absolute;
+    content: "";
+    height: 30px;
+    width: 30px;
+    bottom: 0px;
+    -webkit-transition: .4s;
+    transition: .4s;
+}
+
+input:checked+.slider {
+    background-color: #2196F3;
+}
+
+input:focus+.slider {
+    box-shadow: 0 0 1px #2196F3;
+}
+
+input:checked+.slider:before {
+    -webkit-transform: translateX(30px);
+    -ms-transform: translateX(30px);
+    transform: translateX(30px);
+}
+
+.slider.round {
+    border-radius: 34px;
+}
+
+.slider.round:before {
+    border-radius: 50%;
+}
+
+.rightbar {
+    margin: 10px;
+    margin-left: 0;
+    width: 20%;
+    float: right;
+}
+
+@media screen and (max-width:1109px) {
+    #title {
+        font-size: 3rem;
     }
-    
-    .element_downloads {
-        text-align: center;
-    }
-    
-    h1 {
-        text-align: center;
-    }
-    
-    h2 {
-        text-decoration: double;
-    }
-    
-    .element a {
-        text-decoration: none;
-    }
-    
-    .nav-link {
-        font-size: 1.5rem;
-    }
-    
-    .centerimg {
-        display: block;
-        margin-left: auto;
-        margin-right: auto;
-        max-width: 150px;
-        text-align: center;
-        height: auto;
-    }
-    
-    @media screen and (max-width:640px) {
-        #title {
-            font-size: 3rem;
-        }
-    }
-    
-    @media (max-width: 1109px) {
-        .rightbar {
-            display: none;
-            width: 0;
-            margin: 0;
-            float: none;
-        }
-    }
-    
-    .theme-switch-label {
-        float: left;
-        clear: none;
-        margin-top: 13px;
-        margin-right: 10px;
-        font-size: 0.7rem;
-    }
-    
-    .theme-switch {
-        float: left;
-        clear: none;
-        margin-top: 5px;
-        margin-right: 5px;
-        position: relative;
-        width: 60px;
-        height: 30px;
-    }
-    
-    .theme-switch input {
-        opacity: 0;
+}
+
+@media (max-width: 1109px) {
+    .rightbar {
+        display: none;
         width: 0;
-        height: 0;
+        margin: 0;
+        float: none;
     }
-    
-    .slider {
-        position: absolute;
-        cursor: pointer;
-        top: 0;
-        left: 0;
-        right: 0;
-        bottom: 0;
-        background-color: #ccc;
-        -webkit-transition: .4s;
-        transition: .4s;
+}
+
+@media (max-width: 1109px) {
+    .theme-switch-div {
+        margin: auto;
+        margin-bottom: 0px;
+        float: none;
     }
-    
-    .slider:before {
-        position: absolute;
-        content: "";
-        height: 30px;
-        width: 30px;
-        bottom: 0px;
-        background-color: white;
-        -webkit-transition: .4s;
-        transition: .4s;
-    }
-    
-    input:checked+.slider {
-        background-color: #2196F3;
-    }
-    
-    input:focus+.slider {
-        box-shadow: 0 0 1px #2196F3;
-    }
-    
-    input:checked+.slider:before {
-        -webkit-transform: translateX(30px);
-        -ms-transform: translateX(30px);
-        transform: translateX(30px);
-    }
-    
-    .slider.round {
-        border-radius: 34px;
-    }
-    
-    .slider.round:before {
-        border-radius: 50%;
-    }
+}
