--- a/styles/dark.css
+++ b/styles/dark.css
@@ -14,8 +14,8 @@ body {
 }
 
 .card-body {
-    color: white;
-    background-color: black;
+    color: white!important;
+    background-color: black!important;
 }
 
 .nav-pills .nav-link.active,
