--- a/styles/default.css
+++ b/styles/default.css
@@ -2,6 +2,14 @@
     text-align: center;
 }
 
+body {
+    background-color: azure;
+}
+
+hr {
+    border-width: 3px;
+}
+
 .element_downloads {
     text-align: center;
 }
@@ -25,6 +33,10 @@ h2 {
     transition-duration: 0.25s;
 }
 
+.theme-switch-div {
+    margin-top: 10px;
+}
+
 .card-body {
     text-decoration: none;
     font-size: 0.75rem;
@@ -36,10 +48,11 @@ h2 {
 .card-title {
     padding: 0;
     margin: 0;
+    font-size: 150%;
 }
 
 .card:hover {
-    transform: scale(1.05);
+    transform: scale(1.1);
 }
 
 .nav-link {
@@ -116,7 +129,7 @@ input:checked+.slider:before {
 }
 
 .slider.round:before {
-    border-radius: 50%;
+    border-radius: 100%;
 }
 
 .rightbar {
