General fixes and touch ups

--- a/styles/default.css
+++ b/styles/default.css
@@ -41,8 +41,11 @@ h2 {
     text-decoration: none;
     font-size: 0.75rem;
     margin-top: 0;
-    padding-top: 5px;
-    padding-bottom: 5px;
+    padding: 5px 10px 5px 10px;
+}
+
+.mod-card {
+    height: 72px;
 }
 
 .card-title {
@@ -57,15 +60,6 @@ h2 {
 
 .nav-link {
     font-size: 1.5rem;
-}
-
-.centerimg {
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    max-width: 150px;
-    text-align: center;
-    height: auto;
 }
 
 .theme-switch-div {
